--- a/app/views/prototypes/teacher/english.html
+++ b/app/views/prototypes/teacher/english.html
@@ -152,7 +152,7 @@
 <br>
 
 
-          <a href="teaching-qualification" class="govuk-button show-continue" style="display: inline;">
+          <a href="what-teaching-qualification" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
