--- a/app/views/prototypes/teacher/teaching-qualification.html
+++ b/app/views/prototypes/teacher/teaching-qualification.html
@@ -111,7 +111,7 @@
 <br>
 
 
-          <a href="what-teaching-qualification" class="govuk-button show-continue" style="display: inline;">
+          <a href="complete-john-four" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
