--- a/app/views/prototypes/teacher/staff-zero.html
+++ b/app/views/prototypes/teacher/staff-zero.html
@@ -44,25 +44,16 @@
 <a href="add-two"  class="govuk-button govuk-button--secondary">Add a member of staff </a>
 <br> <br>
 
-<!--<button class="govuk-button govuk-button--secondary" data-module="govuk-button" href="add-two">
-  Add a member of staff
-</button>-->
-
-
-<br>
 
 <h2 class="govuk-heading-m app-application-cards__heading">Incomplete staff members</h2>
-
-       
-
 
 
 <table class="govuk-table">
 
-  <thead class="govuk-table__head">
-  <tr class="govuk-table__row">
-  
-  <th class="govuk-table__cell--numeric"></th>
+<thead class="govuk-table__head">
+<tr class="govuk-table__row">
+
+<th class="govuk-table__cell--numeric"></th>
 </tr>
 </thead>
 
@@ -75,31 +66,34 @@
 <tr class="govuk-table__row">
 
 <td class="govuk-table__cell" scope="row"><h3 class="govuk-heading-s govuk-!-margin-bottom-1">
-  <a href="complete-john" class="govuk-link govuk-link--no-visited-state">
-    John Adams
-  </a>
+<a href="complete-john" class="govuk-link govuk-link--no-visited-state">
+  John Adams
+</a>
 </h3>
 
-    </td>
-    
-     <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
-      Delete<span class="govuk-table__cell--numeric"></span>
-    </a></td></tr>
+  </td>
+  
+   <td class="govuk-table__cell" scope="row"><a class="govuk-link" href="#">
+    Delete<span class="govuk-table__cell--numeric"></span>
+  </a></td></tr>
 </tr>
 
 <tr class="govuk-table__row">
 
+  
+  
+  
+  
+   
+  </tr>
+
 
 
 </tbody>
-</table>
- <!--<p class="govuk-table__cell--numeric"><a class="#" href="add-two">Add a member of staff</a> </p><br>
+</table><br>
 
-          <input type="hidden" name="answers-checked" value="true">
 
-          <a href="#" class="govuk-button show-continue" style="display: inline;">
-    Save
-    </a>-->
+ 
 
         </form>
 
