--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -414,3 +414,77 @@ $govuk-assets-path: '/govuk/assets/';
   color: #B10E1E; }
 
 
+  .app-application-card {
+    border-bottom: 1px solid govuk-colour('mid-grey');
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    @include govuk-media-query($from: tablet) {
+      display: flex;
+      align-items: stretch;
+    }
+  }
+  
+  .app-application-card:first-of-type {
+    border-top: 1px solid govuk-colour('mid-grey');
+    padding-top: 10px;
+  }
+  
+  .app-application-card__primary {
+    @include govuk-media-query($from: tablet) {
+      width: 60%;
+    }
+  
+    p {
+      margin-bottom: 0;
+    }
+  }
+  
+  .app-application-card__secondary {
+    @include govuk-media-query($from: tablet) {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      width: 40%;
+      text-align: right;
+    }
+  }
+  
+  .app-application-card__status {
+    margin-bottom: govuk-spacing(2);
+    margin-top: govuk-spacing(3);
+    @include govuk-media-query($from: tablet) {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+  
+    .govuk-tag {
+      padding: 2px 6px 1px 6px;
+    }
+  }
+  
+  .app-application-card__note {
+    margin-bottom: govuk-spacing(0);
+    @include govuk-font(16);
+  }
+  
+  .app-application-card__note {
+    padding-left: 15px;
+    display: inline-block;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    color: govuk-colour('black');
+    position: relative;
+  }
+  
+  .app-application-card__note:before {
+    border-radius: 25px;
+    height: 10px;
+    width: 10px;
+    background: govuk-colour('black');
+    content: " ";
+    position: absolute;
+    left: 0;
+    top: 6px;
+  }
+
+
