--- a/app/views/prototypes/teacher/explain-how-long.html
+++ b/app/views/prototypes/teacher/explain-how-long.html
@@ -160,7 +160,7 @@
   
   
 
-          <a href="filled2" class="govuk-button show-continue" style="display: inline;">
+          <a href="apprentices" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
