--- a/app/views/prototypes/teacher/staff-zero-new.html
+++ b/app/views/prototypes/teacher/staff-zero-new.html
@@ -53,7 +53,7 @@
     <div class="app-application-card__primary">
       <h3 class="govuk-heading-s govuk-!-margin-bottom-1">
         <a href="/applications/7H0RQT4" class="govuk-link govuk-link--no-visited-state">
-          Alcine Muller
+          John Adams
         </a>
       </h3>
       <p class="govuk-!-margin-bottom-1 govuk-!-font-size-16">Classics (FBKH) – full time at Camberley</p>
