--- a/app/views/prototypes/teacher/vacancies-levels.html
+++ b/app/views/prototypes/teacher/vacancies-levels.html
@@ -172,7 +172,7 @@
   
   
 
-          <a href="explain-how-long" class="govuk-button show-continue" style="display: inline;">
+          <a href="filled2" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
