--- a/app/views/prototypes/teacher/filled2.html
+++ b/app/views/prototypes/teacher/filled2.html
@@ -166,7 +166,7 @@
         </div>
 
 
-          <a href="apprentices" class="govuk-button show-continue" style="display: inline;">
+          <a href="explain-how-long" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
