--- a/app/views/prototypes/teacher/vacancies-subject.html
+++ b/app/views/prototypes/teacher/vacancies-subject.html
@@ -547,10 +547,6 @@
                       </tr>
                       
     
-                      
-    
-                      
-    
                     
                     </tbody>
                   </table>
@@ -563,6 +559,23 @@
             </div>
         
           </fieldset>
+
+          <div class="govuk-form-group">
+            <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
+             
+              <div class="govuk-checkboxes">
+                <div class="govuk-checkboxes__item">
+                  <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
+                  <label class="govuk-label govuk-checkboxes__label" for="waste">
+                    We didn't have any teacher vacancies this year
+                  </label>
+                </div>
+                
+                
+              </div>
+          
+            </fieldset>
+          </div><br><br>
         
 
 
