--- a/app/views/prototypes/teacher/staff-zero-new.html
+++ b/app/views/prototypes/teacher/staff-zero-new.html
@@ -56,15 +56,75 @@
           John Adams
         </a>
       </h3>
+      <p class="govuk-!-margin-bottom-1 govuk-!-font-size-16">Male teacher</p>
+      <p class="govuk-caption-m govuk-!-font-size-16">English Level 3</p>
+    </div>
+    <div class="app-application-card__secondary">
+      <div class="app-application-card__status">
+        <strong class="govuk-tag app-tag--orange govuk-!-margin-bottom-1 govuk-!-font-size-14">
+    Partly completed
+  </strong>
+        <p class="govuk-caption-m govuk-!-font-size-16 govuk-!-margin-bottom-0">12 August 2020</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="app-application-card">
+    <div class="app-application-card__primary">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-1">
+        <a href="/applications/7H0RQT4" class="govuk-link govuk-link--no-visited-state">
+        Sharon Bansal
+        </a>
+      </h3>
+      <p class="govuk-!-margin-bottom-1 govuk-!-font-size-16">Female teacher</p>
+      <p class="govuk-caption-m govuk-!-font-size-16">The Royal Borough Teaching School Alliance – ratified by Springbank SCITT</p>
+    </div>
+    <div class="app-application-card__secondary">
+      <div class="app-application-card__status">
+        <strong class="govuk-tag app-tag--orange govuk-!-margin-bottom-1 govuk-!-font-size-14">
+          Partly completed
+  </strong>
+        <p class="govuk-caption-m govuk-!-font-size-16 govuk-!-margin-bottom-0">12 August 2020</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="app-application-card">
+    <div class="app-application-card__primary">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-1">
+        <a href="/applications/7H0RQT4" class="govuk-link govuk-link--no-visited-state">
+          Jonathan Bridger
+        </a>
+      </h3>
+      <p class="govuk-!-margin-bottom-1 govuk-!-font-size-16">Female teacher</p>
+      <p class="govuk-caption-m govuk-!-font-size-16">The Royal Borough Teaching School Alliance – ratified by Springbank SCITT</p>
+    </div>
+    <div class="app-application-card__secondary">
+      <div class="app-application-card__status">
+        <strong class="govuk-tag app-tag--orange govuk-!-margin-bottom-1 govuk-!-font-size-14">
+          Partly completed
+  </strong>
+        <p class="govuk-caption-m govuk-!-font-size-16 govuk-!-margin-bottom-0">12 August 2020</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="app-application-card">
+    <div class="app-application-card__primary">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-1">
+        <a href="/applications/7H0RQT4" class="govuk-link govuk-link--no-visited-state">
+          Henry Decorcey
+        </a>
+      </h3>
       <p class="govuk-!-margin-bottom-1 govuk-!-font-size-16">Classics (FBKH) – full time at Camberley</p>
       <p class="govuk-caption-m govuk-!-font-size-16">The Royal Borough Teaching School Alliance – ratified by Springbank SCITT</p>
     </div>
     <div class="app-application-card__secondary">
       <div class="app-application-card__status">
         <strong class="govuk-tag app-tag--orange govuk-!-margin-bottom-1 govuk-!-font-size-14">
-    Offer withdrawn
+          Partly completed
   </strong>
-        <p class="govuk-caption-m govuk-!-font-size-16 govuk-!-margin-bottom-0">2019 to 2020 (starts 2020)</p>
+        <p class="govuk-caption-m govuk-!-font-size-16 govuk-!-margin-bottom-0">12 August 2020</p>
       </div>
     </div>
   </div>
@@ -82,69 +142,9 @@
     <div class="app-application-card__secondary">
       <div class="app-application-card__status">
         <strong class="govuk-tag app-tag--orange govuk-!-margin-bottom-1 govuk-!-font-size-14">
-    Offer withdrawn
+          Partly completed
   </strong>
-        <p class="govuk-caption-m govuk-!-font-size-16 govuk-!-margin-bottom-0">2019 to 2020 (starts 2020)</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="app-application-card">
-    <div class="app-application-card__primary">
-      <h3 class="govuk-heading-s govuk-!-margin-bottom-1">
-        <a href="/applications/7H0RQT4" class="govuk-link govuk-link--no-visited-state">
-          Alcine Muller
-        </a>
-      </h3>
-      <p class="govuk-!-margin-bottom-1 govuk-!-font-size-16">Classics (FBKH) – full time at Camberley</p>
-      <p class="govuk-caption-m govuk-!-font-size-16">The Royal Borough Teaching School Alliance – ratified by Springbank SCITT</p>
-    </div>
-    <div class="app-application-card__secondary">
-      <div class="app-application-card__status">
-        <strong class="govuk-tag app-tag--orange govuk-!-margin-bottom-1 govuk-!-font-size-14">
-    Offer withdrawn
-  </strong>
-        <p class="govuk-caption-m govuk-!-font-size-16 govuk-!-margin-bottom-0">2019 to 2020 (starts 2020)</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="app-application-card">
-    <div class="app-application-card__primary">
-      <h3 class="govuk-heading-s govuk-!-margin-bottom-1">
-        <a href="/applications/7H0RQT4" class="govuk-link govuk-link--no-visited-state">
-          Alcine Muller
-        </a>
-      </h3>
-      <p class="govuk-!-margin-bottom-1 govuk-!-font-size-16">Classics (FBKH) – full time at Camberley</p>
-      <p class="govuk-caption-m govuk-!-font-size-16">The Royal Borough Teaching School Alliance – ratified by Springbank SCITT</p>
-    </div>
-    <div class="app-application-card__secondary">
-      <div class="app-application-card__status">
-        <strong class="govuk-tag app-tag--orange govuk-!-margin-bottom-1 govuk-!-font-size-14">
-    Offer withdrawn
-  </strong>
-        <p class="govuk-caption-m govuk-!-font-size-16 govuk-!-margin-bottom-0">2019 to 2020 (starts 2020)</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="app-application-card">
-    <div class="app-application-card__primary">
-      <h3 class="govuk-heading-s govuk-!-margin-bottom-1">
-        <a href="/applications/7H0RQT4" class="govuk-link govuk-link--no-visited-state">
-          Alcine Muller
-        </a>
-      </h3>
-      <p class="govuk-!-margin-bottom-1 govuk-!-font-size-16">Classics (FBKH) – full time at Camberley</p>
-      <p class="govuk-caption-m govuk-!-font-size-16">The Royal Borough Teaching School Alliance – ratified by Springbank SCITT</p>
-    </div>
-    <div class="app-application-card__secondary">
-      <div class="app-application-card__status">
-        <strong class="govuk-tag app-tag--orange govuk-!-margin-bottom-1 govuk-!-font-size-14">
-    Offer withdrawn
-  </strong>
-        <p class="govuk-caption-m govuk-!-font-size-16 govuk-!-margin-bottom-0">2019 to 2020 (starts 2020)</p>
+        <p class="govuk-caption-m govuk-!-font-size-16 govuk-!-margin-bottom-0">12 August 2020 </p>
       </div>
     </div>
   </div>
