--- a/app/views/prototypes/teacher/role.html
+++ b/app/views/prototypes/teacher/role.html
@@ -51,17 +51,7 @@
               Senior leader
             </label>
             <div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
-              Principal, vice-principal, director, CEO, head of FE service or training
-
-
-
-
-
-
-
-
-
-
+              Principal, vice-principal, director, CEO, head of FE service or trainin
 
 
             </div>
@@ -85,7 +75,7 @@
             </label>
 
             <div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
-              Someone who teachers or trains as the main part of their job
+              Someone who teaches or trains as the main part of their job
             </div>
           </div><br>
           <div class="govuk-checkboxes__item">
