--- a/app/views/prototypes/no-vacancies/role.html
+++ b/app/views/prototypes/no-vacancies/role.html
@@ -85,7 +85,7 @@
             </label>
 
             <div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
-              Someone who teachers or trains as the main part of their job
+              Someone who teaches or trains as the main part of their job
             </div>
           </div><br>
           <div class="govuk-checkboxes__item">
