--- a/app/views/prototypes/raph/filled2.html
+++ b/app/views/prototypes/raph/filled2.html
@@ -35,11 +35,13 @@
           <fieldset class="govuk-fieldset" aria-describedby="citizenship-conditional-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
               <h1 class="govuk-fieldset__heading">
-                Were the vacancies filled?
+                Were the vacancies filled as intended?
               </h1>
             </legend>
             <div id="citizenship-conditional-hint" class="govuk-hint">
-              Add the number of vacancies
+              Tell us if you found staff for these roles as advertised, or had to fill in another way.
+
+For example, via an agency.
             </div>
             
             <br><br>
