--- a/app/views/prototypes/raph/many-vacancies-filled.html
+++ b/app/views/prototypes/raph/many-vacancies-filled.html
@@ -49,7 +49,7 @@
 
 
 
-          <a href="vacancies-subject" class="govuk-button show-continue" style="display: inline;">
+          <a href="vacancies-number" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
