--- a/app/views/prototypes/raph/apprentices.html
+++ b/app/views/prototypes/raph/apprentices.html
@@ -26,15 +26,12 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  How many apprentices did you employ?
+              How many apprentices worked for you in the last academic year?
 </h1>
 
             
 <p>
-  Tell us how many apprentices you employed in your own organisation - not the ones you trained for other organisations.
-
-
-</p>
+  Include the apprentices who started before or during the academic year and those who left during the year.</p>
 
 
 
