--- a/app/views/prototypes/raph/vacancies-subject.html
+++ b/app/views/prototypes/raph/vacancies-subject.html
@@ -35,11 +35,11 @@
           <fieldset class="govuk-fieldset" aria-describedby="citizenship-conditional-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
               <h1 class="govuk-fieldset__heading">
-                How many teaching vacancies did you have - by subject?
+                Which subjects were difficult to recruit teachers for?
               </h1>
             </legend>
             <div id="citizenship-conditional-hint" class="govuk-hint">
-            Add the teacher vacancies you had - next to their subjects in the list
+            Add the number of teacher vacancies next to the subjects in the list
             </div>
             
             <br><br>
@@ -567,7 +567,7 @@
                 <div class="govuk-checkboxes__item">
                   <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
                   <label class="govuk-label govuk-checkboxes__label" for="waste">
-                    We didn't have any teacher vacancies this year
+                    We didn't have any 'difficult to recruit' teacher vacancies this year.
                   </label>
                 </div>
                 
