--- a/app/views/prototypes/raph/apprentices.html
+++ b/app/views/prototypes/raph/apprentices.html
@@ -31,7 +31,7 @@
 
             
 <p>
-  Include the apprentices who started before or during the academic year and those who left during the year.</p>
+  Include apprentices who started before or during the year and those who left.</p>
 
 
 
