--- a/app/views/prototypes/raph/role-main.html
+++ b/app/views/prototypes/raph/role-main.html
@@ -43,7 +43,7 @@
     <div class="govuk-radios">
       
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
+        <input class="govuk-radios__input" id="radio-lead1" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
           Senior leader
         </label>
@@ -51,7 +51,7 @@
       </div>
 
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
+        <input class="govuk-radios__input" id="radio-lead2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
           Manager
         </label>
@@ -61,7 +61,7 @@
       </div>
 
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
+        <input class="govuk-radios__input" id="radio-lead3" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
           Teacher
         </label>
@@ -69,14 +69,14 @@
       </div>
 
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
+        <input class="govuk-radios__input" id="radio-lead4" name="where-do-you-live" type="radio" value="wales">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
           Teaching support
         </label>
       </div>
 
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
+        <input class="govuk-radios__input" id="radio-lead5" name="where-do-you-live" type="radio" value="wales">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
           Administration
         </label>
@@ -88,10 +88,9 @@
 
 <br>
 
-
-          <a href="qualification-type" class="govuk-button show-continue" style="display: inline;">
-      Continue
-    </a>
+<a href="#" class="govuk-button show-continue" id ="choice-button" style="display: inline;">
+  Continue
+</a>
        
       </div>
     </div>
