--- a/app/views/prototypes/raph/vacancies-subject.html
+++ b/app/views/prototypes/raph/vacancies-subject.html
@@ -53,7 +53,7 @@
                     </span>
                   </h2>
                   <div class="govuk-accordion__section-summary govuk-body" id="accordion-with-summary-sections-summary-1">
-                    A levels and GCSE's
+                    A levels and GCSEs
                   </div>
                 </div>
                 <div id="accordion-with-summary-sections-content-1" class="govuk-accordion__section-content" aria-labelledby="accordion-with-summary-sections-heading-1">
