--- a/app/views/prototypes/teacher/qualification-type.html
+++ b/app/views/prototypes/teacher/qualification-type.html
@@ -60,7 +60,7 @@
             Academic qualifications
           </label>
           <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-            A levels and GCSE's
+            A levels and GCSEs
           </div>
         </div>
 
