--- a/app/views/prototypes/raph/role.html
+++ b/app/views/prototypes/raph/role.html
@@ -51,7 +51,7 @@
               Senior leader
             </label>
             <div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
-              Principal, vice-principal, director, CEO, head of FE service or trainin
+              Principal, vice-principal, director, CEO, head of FE service or training
 
 
             </div>
@@ -75,7 +75,7 @@
             </label>
 
             <div id="nationality-item-hint" class="govuk-hint govuk-checkboxes__hint">
-              Someone who teaches or trains as the main part of their job
+              Lecturer, teacher, trainer or tutor
             </div>
           </div><br>
           <div class="govuk-checkboxes__item">
