--- a/app/views/prototypes/raph/filled2.html
+++ b/app/views/prototypes/raph/filled2.html
@@ -58,7 +58,7 @@ For example, via an agency.
               </thead>
               <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
-                  <th scope="row" class="govuk-table__header">Yes - filled permanently or as advertised</th>
+                  <th scope="row" class="govuk-table__header">Yes - filled as advertised</th>
                   <td class="govuk-table__cell govuk-table__cell--numeric"></td>
                   <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                    <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
@@ -98,7 +98,7 @@ For example, via an agency.
                               
                               <tbody class="govuk-table__body">
                                 <tr class="govuk-table__row">
-                                  <th scope="row" class="govuk-table__header">Yes - filled permanently or as advertised</th>
+                                  <th scope="row" class="govuk-table__header">Yes - filled as advertised</th>
                                   <td class="govuk-table__cell govuk-table__cell--numeric"></td>
                                   <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                                    <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
@@ -137,7 +137,7 @@ For example, via an agency.
                               
               <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
-                  <th scope="row" class="govuk-table__header">Yes - filled permanently or as advertised</th>
+                  <th scope="row" class="govuk-table__header">Yes - filled as advertised</th>
                   <td class="govuk-table__cell govuk-table__cell--numeric"></td>
                   <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
                    <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
@@ -168,7 +168,7 @@ For example, via an agency.
         </div>
 
 
-          <a href="explain-how-long" class="govuk-button show-continue" style="display: inline;">
+          <a href="apprentices" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
