--- a/app/views/prototypes/raph/many-vacancies.html
+++ b/app/views/prototypes/raph/many-vacancies.html
@@ -33,16 +33,19 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How many senior leader or manager vacancies did you have in the last academic year?
+        How many senior leader or manager vacancies did you have?
       </h1>
-    </legend><br><br>
-    <div class="govuk-form-group">
+    </legend><br>
+
+    
+        <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span></h1>
+    <div class="govuk-form-group"><br>
       
       <label class="govuk-label" for="width-10">
         Principals, vice-principals, senior or middle managers, CEOs, directors
       </label>
       <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
-    </div><br>
+    </div><br><br>
 
    
 </fieldset>
