--- a/app/views/prototypes/raph/role-main.html
+++ b/app/views/prototypes/raph/role-main.html
@@ -43,16 +43,16 @@
     <div class="govuk-radios">
       
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="radio-lead1" name="where-do-you-live" type="radio" value="england">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+        <input class="govuk-radios__input" id="radio-lead1" name="" type="radio" value="leader">
+        <label class="govuk-label govuk-radios__label" for="leader">
           Senior leader
         </label>
         
       </div>
 
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="radio-lead2" name="where-do-you-live" type="radio" value="scotland">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+        <input class="govuk-radios__input" id="radio-lead2" name="" type="radio" value="manager">
+        <label class="govuk-label govuk-radios__label" for="manager">
           Manager
         </label>
         
@@ -61,23 +61,23 @@
       </div>
 
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="radio-lead3" name="where-do-you-live" type="radio" value="england">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+        <input class="govuk-radios__input" id="radio-lead3" name="" type="radio" value="teacher">
+        <label class="govuk-label govuk-radios__label" for="">
           Teacher
         </label>
         
       </div>
 
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="radio-lead4" name="where-do-you-live" type="radio" value="wales">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+        <input class="govuk-radios__input" id="radio-lead4" name="" type="radio" value="support">
+        <label class="govuk-label govuk-radios__label" for="">
           Teaching support
         </label>
       </div>
 
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="radio-lead5" name="where-do-you-live" type="radio" value="wales">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+        <input class="govuk-radios__input" id="radio-lead5" name="" type="radio" value="admin">
+        <label class="govuk-label govuk-radios__label" for="admin">
           Administration
         </label>
       </div>
