--- a/app/views/prototypes/raph/filled2.html
+++ b/app/views/prototypes/raph/filled2.html
@@ -46,7 +46,7 @@ For example, via an agency.
             
             <br><br>
 
-            <h2 class="govuk-heading-m">English - Level 3</h2>
+           
             <table class="govuk-table">
                 
               <thead class="govuk-table__head">
@@ -81,84 +81,10 @@ For example, via an agency.
               </tbody>
             </table>
 
-          <br><br>
+          
                   
             
                 
-                            <h2 class="govuk-heading-m">English - Level 4 and above</h2>
-                            <table class="govuk-table">
-                              <thead class="govuk-table__head">
-                                <tr class="govuk-table__row">
-                                  <th scope="col" class="govuk-table__header"></th>
-                                  <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
-                                  <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
-                                </tr>
-                              </thead>
-                                
-                              
-                              <tbody class="govuk-table__body">
-                                <tr class="govuk-table__row">
-                                  <th scope="row" class="govuk-table__header">Yes - filled as advertised</th>
-                                  <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                                  <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
-                                   <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
-                                </tr>
-                
-                                <tr class="govuk-table__row">
-                                  <th scope="row" class="govuk-table__header">Yes - filled temporarily
-                                  </th>
-                                  <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                                  <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
-                                   <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
-                                </tr>
-                
-                                <tr class="govuk-table__row">
-                                  <th scope="row" class="govuk-table__header">No</th>
-                                  <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                                  <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
-                                   <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
-                                </tr>
-                              </tbody>
-                            </table>
-                            <br><br>
-                
-                        
-
-            <h2 class="govuk-heading-m">Business Administration - Level 3</h2><br>
-            <table class="govuk-table">
-              <thead class="govuk-table__head">
-                <tr class="govuk-table__row">
-                  <th scope="col" class="govuk-table__header"></th>
-                  <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
-                  <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
-                </tr>
-              </thead>
-                                
-                              
-              <tbody class="govuk-table__body">
-                <tr class="govuk-table__row">
-                  <th scope="row" class="govuk-table__header">Yes - filled as advertised</th>
-                  <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                  <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
-                   <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
-                </tr>
-
-                <tr class="govuk-table__row">
-                  <th scope="row" class="govuk-table__header">Yes - filled temporarily
-                  </th>
-                  <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                  <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
-                   <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
-                </tr>
-
-                <tr class="govuk-table__row">
-                  <th scope="row" class="govuk-table__header">No</th>
-                  <td class="govuk-table__cell govuk-table__cell--numeric"></td>
-                  <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
-                   <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
-                </tr>
-              </tbody>
-            </table>
           
             </div></div>
 
@@ -168,7 +94,7 @@ For example, via an agency.
         </div>
 
 
-          <a href="apprentices" class="govuk-button show-continue" style="display: inline;">
+          <a href="vacancies-subject" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
