--- a/app/views/prototypes/raph/filled2.html
+++ b/app/views/prototypes/raph/filled2.html
@@ -39,7 +39,7 @@
               </h1>
             </legend>
             <div id="citizenship-conditional-hint" class="govuk-hint">
-              Tell us if you found staff as advertised, or had to fill in another way.
+              How many vacancies were filled - as advertised. How many did you have to fill in another way.
 
 For example, via an agency.
             </div>
