--- a/app/views/prototypes/raph/answers-provider.html
+++ b/app/views/prototypes/raph/answers-provider.html
@@ -74,7 +74,7 @@
               Teachers
             </dt>
             <dd class="govuk-summary-list__value">
-              English 2
+              12
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -83,27 +83,15 @@
             </dd>
           </div>
 
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-            
-            </dt>
-            <dd class="govuk-summary-list__value">
-           Business Administration 1
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
+          
 
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Level
+              Teachers filled
             </dt>
             <dd class="govuk-summary-list__value">
-          English Level 3 - 1
+          As advertised - 10
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -119,7 +107,7 @@
              
             </dt>
             <dd class="govuk-summary-list__value">
-              English Level 4 - 1
+              Temporarily - 1
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -130,10 +118,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Level
+             
             </dt>
             <dd class="govuk-summary-list__value">
-              Business Administration  Level 3 - 1
+              No - 1
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -144,10 +132,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Time to fill English Level 3
+              Difficult subjects
             </dt>
             <dd class="govuk-summary-list__value">
-              2 to 3 months
+              English, Business Administration
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -158,10 +146,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Time to fill English Level 4
+              English level
             </dt>
             <dd class="govuk-summary-list__value">
-              2 to 3 months
+              Level 2
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -172,52 +160,10 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Time to fill English Level 3
+              Business Administration level
             </dt>
             <dd class="govuk-summary-list__value">
-              Less than one month
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Filled - English Level 3
-            </dt>
-            <dd class="govuk-summary-list__value">
-              No 2
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Filled - English Level 4
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Yes - filled temporarily 1
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> address</span>
-              </a>
-            </dd>
-          </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Filled - Business Administration Level 3
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Yes - filled temporarily 1
+              Level 3
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
