--- a/app/views/prototypes/raph/vacancies-levels.html
+++ b/app/views/prototypes/raph/vacancies-levels.html
@@ -35,7 +35,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="citizenship-conditional-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
               <h1 class="govuk-fieldset__heading">
-                What level were the vacancies for?
+                What level was it difficult to recruit for?
               </h1>
             </legend>
          <!-- <div id="citizenship-conditional-hint" class="govuk-hint">
