--- a/app/views/prototypes/raph/mis.html
+++ b/app/views/prototypes/raph/mis.html
@@ -48,7 +48,7 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="radio-1" name="choose" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="choose">
-          Add each members details into an online form
+          Add each member's details into an online form
         </label>
       </div><br>
 
