--- a/app/views/prototypes/raph/vacancies-number.html
+++ b/app/views/prototypes/raph/vacancies-number.html
@@ -37,10 +37,11 @@
               <h1 class="govuk-fieldset__heading">
                 How many teaching vacancies did you have?
               </h1>
-            </legend>
-          
-        <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span></h1>
-            <div class="govuk-form-group">
+            </legend><br>
+
+    
+            <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span></h1>
+        <div class="govuk-form-group">
     <br>
               <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
             </div>        
