--- a/app/views/prototypes/raph/salary.html
+++ b/app/views/prototypes/raph/salary.html
@@ -38,7 +38,9 @@
             <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--xl" for="postcode">
                 What was the total amount they were paid for the year?
               </label><br>
-              <span id="sort-code-hint" class="govuk-hint">
+              
+              <span class="govuk-caption-xl">Academic year 1 August 2020 to 31 July 2021</span></h1>
+              <span id="sort-code-hint" class="govuk-hint"><br><br>
     For example, £26,386
   </span>
 
