--- a/app/views/prototypes/raph/complete-john.html
+++ b/app/views/prototypes/raph/complete-john.html
@@ -64,7 +64,7 @@
             <dt class="govuk-summary-list__key">
               <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
                 <h3 class="govuk-heading-m govuk-!-margin-bottom-3">
-                  <a href="role" class="govuk-link govuk-link--no-visited-state">
+                  <a href="role-main" class="govuk-link govuk-link--no-visited-state">
                     Job role</a></h3>
                    <!--<p>
                       18 August 1992<br>
