--- a/app/views/prototypes/raph/complete-john-four.html
+++ b/app/views/prototypes/raph/complete-john-four.html
@@ -68,7 +68,7 @@
                 <a href="role-main" class="govuk-link govuk-link--no-visited-state">
                   Job role</a></h3>
                  <p>
-                    Teacher<br>
+                    Senior leader<br>
           </dt>
          
           <dd class="govuk-summary-list__actions">
