--- a/app/views/prototypes/raph/does-teach.html
+++ b/app/views/prototypes/raph/does-teach.html
@@ -37,7 +37,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Does this include any teaching?
+        Does John have any teaching responsibilities?
       </h1>
     </legend>
   
