--- a/app/views/prototypes/raph/complete-john-five.html
+++ b/app/views/prototypes/raph/complete-john-five.html
@@ -71,7 +71,7 @@
                 <a href="role" class="govuk-link govuk-link--no-visited-state">
                   Job role</a></h3>
                  <p>
-                    Teacher<br>
+                    Senior leader<br>
                   
           </dt>
          
