--- a/app/views/prototypes/raph/role-main.html
+++ b/app/views/prototypes/raph/role-main.html
@@ -36,7 +36,7 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Which best describes John's main role?
+        What is John's main role?
       </h1>
     </legend>
     <br>
