--- a/app/views/prototypes/raph/what-teaching-qualification.html
+++ b/app/views/prototypes/raph/what-teaching-qualification.html
@@ -124,6 +124,13 @@
         <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
           Unsure
         </label>
+      </div><br>
+
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
+          Don't know
+        </label>
       </div>
         
       </div>
@@ -133,19 +140,6 @@
 </div>
 
 <br>
-
-
-
-  
-
-
-
-   
-
-
-  
-
-
 
 
           <a href="teaching-qualification" class="govuk-button show-continue" style="display: inline;">
