--- a/app/views/prototypes/raph/english.html
+++ b/app/views/prototypes/raph/english.html
@@ -39,9 +39,9 @@
         What is their highest qualification in English?
       </h1>
     </legend>
-    <span id="sign-in-hint" class="govuk-hint">
-      There is an option to answer that you don't know - but you will need to answer it next year. Make sure you collect the answer for next time.
-     </span><br>
+    <div class="govuk-inset-text">
+      There is an option to answer that you don't know this year - but you will need to give an answer next year.
+    </div><br>
     <div class="govuk-radios">
       
       </div>
