--- a/app/views/prototypes/raph/what-teaching-qualification.html
+++ b/app/views/prototypes/raph/what-teaching-qualification.html
@@ -39,12 +39,13 @@
       <h1 class="govuk-fieldset__heading">
         What is their highest teaching qualification?
       </h1>
-    </legend><br>
+    </legend>
+
+    <div class="govuk-inset-text">
+      There is an option to answer that you don't know this year - but you will need to give an answer next year.
+    </div><br>
     
     <div class="govuk-radios">
-      
-     
-      
 
        <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
