--- a/app/views/prototypes/raph/maths.html
+++ b/app/views/prototypes/raph/maths.html
@@ -42,9 +42,11 @@
         What is their highest qualification in Maths?
       </h1>
     </legend>
-    <span id="sign-in-hint" class="govuk-hint">
-     There is an option to answer that you don't know - but you will need to answer it next year. Make sure you collect the answer for next time.
-    </span><br>
+    
+
+    <div class="govuk-inset-text">
+      There is an option to answer that you don't know this year - but you will need to give an answer next year.
+    </div><br>
     <div class="govuk-radios">
       
       <div class="govuk-radios__item">
@@ -168,7 +170,7 @@
       Continue
     </a>
        
-      </div>
+      </div><br>
     </div>
   </main>
 </div>
