--- a/app/views/prototypes/raph/what-teaching-qualification.html
+++ b/app/views/prototypes/raph/what-teaching-qualification.html
@@ -42,7 +42,7 @@
     </legend>
 
     <div class="govuk-inset-text">
-      There is an option to answer that you don't know this year - but you will need to give an answer next year.
+      There is an option to answer that you don't know - this year. You will need to give an answer next year.
     </div><br>
     
     <div class="govuk-radios">
